opensource-101/kubernetes-101/firstzone-example/72/networkpolicy.yaml
```yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: networkpolicy
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: exam-net-policy
        - podSelector:
            matchLabels:
              role: frontend
```
